--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,16 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/GideonClass
-spring.datasource.password=@Daberechi20
-spring.datasource.username=root
-spring.jpa.show-sql=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/GideonClass
+#spring.datasource.password=@Daberechi20
+#spring.datasource.username=root
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#server.port=9044
+#
+
+spring.datasource.url=jdbc:postgresql://localhost:5433/GideonDB
+spring.datasource.username=postgres
+spring.datasource.password=123456789
 spring.jpa.hibernate.ddl-auto=update
-server.port=9044
-
-
-
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+server.port= 9048
+spring.jpa.properties.hibernate.show_sql= true
 
