--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,11 @@
 #server.port=9044
 #
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/GideonDB
+spring.datasource.url=jdbc:postgresql://localhost:5433/EdoGideon
 spring.datasource.username=postgres
 spring.datasource.password=123456789
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
-server.port= 9048
+server.port= 9049
 spring.jpa.properties.hibernate.show_sql= true
 
